<resources>
    <string name="app_name">Na-My-Work</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send_a_message">Send a message</string>
    <string name="personal_information">Personal Information</string>
    <string name="full_name">Full Name:</string>
    <string name="full_name_asterisk">Full Name <font color="#F1214A">*</font></string>
    <string name="email_address">Email Address:</string>
    <string name="email_address_asterisk">Email Address <font color="#F1214A">*</font></string>
    <string name="date_of_birth">Date Of Birth:</string>
    <string name="date_of_birth_asterisk">Date Of Birth <font color="#F1214A">*</font></string>
    <string name="country_of_residence">Country of Residence:</string>
    <string name="country_of_residence_asterisk">Country of Residence <font color="#F1214A">*</font></string>
    <string name="state_city_of_residence">State/City of Residence:</string>
    <string name="state_city_of_residence_asterisk">State/City of Residence <font color="#F1214A">*</font></string>
    <string name="phone_number">Phone Number:</string>
    <string name="work_experience">Work Experience</string>
    <string name="resume">Resume</string>
    <string name="pdf">PDF</string>
    <string name="catalogue">Catalogue</string>
    <string name="link">Link</string>
    <string name="photos">Photos</string>
    <string name="videos">Videos</string>
    <string name="soft_skill">Soft Skill</string>
    <string name="splash_screen">splash_screen</string>
    <string name="onboard_text_1">Get connected to professional\n service providers around the\n world</string>
    <string name="onboard_text_2">Find the best hands for your\n projects on demand</string>
    <string name="onboard_text_3">Easiest way to stay connected\n to professionals across all\n spheres</string>
    <string name="professional_cycle">professional_cycle</string>
    <string name="get_started">Get started</string>
    <string name="next">Next</string>
    <string name="create_account">Create account</string>
    <string name="log_in">Log in</string>
    <string name="or_continue_with">or continue with</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="app_logo">app_logo</string>
    <string name="skip">Skip</string>
    <string name="welcome_back">Welcome back %s!</string>
    <string name="input_your_active_email_address">input your active email address</string>
    <string name="input_a_password_you_can_remember">Input a password you can remember</string>
    <string name="email_address_tv">Email Address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?<font color="#2E7D32"><b> Reset</b></font></string>
    <string name="sign_in">Sign in</string>
    <string name="don_t_have_a_na_my_work_account_yet">Don’t have a Na-My-Work account yet?</string>
    <string name="create_a_free_account">Create a free account</string>
    <string name="password_must_contain_capital_letters">Password must contain capital letters</string>
    <string name="include_numbers_or_special_characters">Include numbers or special characters</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="full_name_tv">Full Name</string>
    <string name="janetdoe">JanetDoe</string>
    <string name="janedoe_gmail_com">janedoe@gmail.com</string>
    <string name="janedoe_123">Janedoe@123</string>
    <string name="create_account_tv">Create account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in_tv">Sign in</string>
    <string name="terms_and_privacy_text">
    By creating an account, you agree to our
    <font color="#2E7D32">Terms of Service</font>
    and
    <font color="#2E7D32">Privacy Policy</font>
</string>
    <string name="a_confirmation_code_has_been_sent_to_your_email_address">A confirmation code has been sent to your email address.</string>
    <string name="resend_code">Resend code</string>
    <string name="send_code">Send Code</string>
    <string name="input_the_code_sent_to_your_email_address">Input the code sent to your email address</string>
    <string name="input_code">Input code</string>
    <string name="create_new_password">Create New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="create_password">Create Password</string>
    <string name="reset_password_successfully">Reset Password Successfully</string>
    <string name="login_account">Login Account</string>
    <string name="delete_prompt_list">
        \n <li>Delete your account from Na-My-Work</li>
        \n <li>Delete all your data from Na-My-Work</li>
        \n <li>Erase all your message history.</li>
    </string>
    <string name="to_delete_acct">To delete your account enter your Email address and password</string>
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="services">Services</string>
    <string name="messages">Messages</string>
    <string name="profile">Profile</string>
    <string name="currency">Currency</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="input_old_password">Input old password</string>
    <string name="old_password">Old password</string>
    <string name="change_password">Change password</string>
    <string name="back_button">Back button</string>
    <string name="new_password">New password</string>
    <string name="all_devices_will_be_required_to_sign_in_with_new_password">All devices will be required to sign in with new password</string>
    <string name="see_all">See All</string>
    <string name="popular_services">Popular services</string>
    <string name="discover_service_providers">Discover service providers</string>
    <string name="filter">Filter</string>
    <string name="explore_awesome_professional_services">Explore awesome professional services</string>
    <string name="view_profile">View Profile</string>
    <string name="write_a_short_brief_about_yourself_and_your_working_experience">Write a short brief about yourself and your working experience</string>
    <string name="save_continue"><![CDATA[Save & Continue]]></string>
    <string name="enter_your_country_of_residence">Enter your country of residence</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="enter_full_legal_name">Enter full legal name</string>
    <string name="phone_number_asterisk">Phone number <font color="#F1214A">*</font></string>
    <string name="dd_mm_yy">DD/MM/YY</string>
    <string name="enter_state_of_residence">Enter state of residence</string>
    <string name="about_me">About me</string>
    <string name="make_sure_you_make_yourself_more_attractive_and_professional_to_attract_suitable_clients_keep_it_short_and_simple_not_more_than_2000_words">(Make sure you make yourself more attractive and professional to attract suitable clients. Keep it short and simple). Not more than 2000 words</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="position">Position</string>
    <string name="enter_your_employer_s_name">Enter your employer’s name</string>
    <string name="company_name">Company name</string>
    <string name="enter_your_work_experience_ascendingly_starting_from_your_recent_experience">Enter your work experience ascendingly, starting from your recent experience.</string>
    <string name="file_size_should_not_be_more_than_2mb">*File size should not be more than 2mb</string>
    <string name="file_format_pdf_or_doc_or_docx">File format: .PDF or .DOC Or .DOCX</string>
    <string name="upload_resume_cv">Upload Resume/CV</string>
    <string name="you_can_upload_resume_to_automatically_fill_your_work_experience">You can upload resume to automatically fill your work experience</string>
    <string name="what_do_you_do">What do you do?</string>
    <string name="upload_resume">Upload Resume</string>
    <string name="work_description">Work description</string>
    <string name="add_another_experience">Add another experience</string>
    <string name="you_can_upload_up_to_10_medias_including_videos_and_images">You can upload up to 10 medias. Including Videos and images</string>
    <string name="media">Media</string>
    <string name="portfolio_link">Portfolio link</string>
    <string name="input_the_link_to_your_portfolio">Input the link to your portfolio</string>
    <string name="soft_skills">Soft skills</string>
    <string name="you_can_add_up_to_10_soft_skills">You can add up to 10 soft skills</string>
    <string name="collaboration">+ Collaboration</string>
    <string name="communication">+ Communication</string>
    <string name="attention_to_details">+ Attention to details</string>
    <string name="team_work">+ Team work</string>
    <string name="fast_learners">+ Fast Learners</string>
    <string name="bio_data">Bio data</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="media_portfolio"><![CDATA[Media & Portfolio]]></string>
    <string name="_3">3</string>
    <string name="tell_us_about_the_problem_you_are_experiencing">Tell us about the problem you are experiencing</string>
    <string name="report_a_problem">Report A Problem</string>
    <string name="include_device_information_optional">Include device information? (optional)</string>
    <string name="technical_details_like_your_model_and_settings_can_help_us_answer_your_questions">Technical details like your model and settings can help us answer your questions.</string>
    <string name="we_will_respond_to_you_via_email">We will respond to you via email</string>
    <string name="send">Send</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="viewed_profile">Viewed profile</string>
    <string name="nothing">Nothing</string>
    <string name="updates">Updates</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="receive_notifications_for_new_updates">Receive notifications for new updates</string>
    <string name="email">Email</string>
    <string name="show_notification_for">Show Notification for</string>
    <string name="back">back</string>
    <string name="show_notification_for_nothing">show notification for nothing</string>
    <string name="show_notification_for_viewed_profile">show notification for viewed profile</string>
    <string name="show_notification_for_messages">show notification for messages</string>
    <string name="send_notifications_to_jane_doe_gmail_com_for">Send notifications to %s for:</string>
    <string name="settings">Settings</string>
    <string name="notifications_settings">Notifications Settings</string>
    <string name="security">Security</string>
    <string name="log_out">Log Out</string>
    <string name="share">Share</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_services">Terms of Services</string>
    <string name="faqs">FAQS</string>
    <string name="about_us">About Us</string>
    <string name="engineering_amp_construction"><![CDATA[Engineering & Construction]]></string>
    <string name="deleting_your_account_will">Deleting your account will:</string>
    <string name="two_step_verification">Two-Step Verification</string>
    <string name="for_extra_security_turn_on_two_step_verification_which_will_require_a_pin_when_registering_your_email_with_na_my_work">For extra security turn on two-step verification, which will require a pin when registering your email with Na-My-Work</string>
    <string name="turn_on">Turn On</string>
    <string name="category">Category</string>
</resources>